Fixed naming and validation

--- a/dashboard.html
+++ b/dashboard.html
@@ -220,7 +220,7 @@
         <div class="c-db__topbar__profile js-profile">
           <div class="c-nav__profile">
             <a href="#notifications" class="c-nav__notification has-notification">
-              <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
+              <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
                 <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
               </svg>
@@ -231,16 +231,16 @@
       </div>
       <div class="c-dashboard__sidebar">
         <div class="c-dasboard__sidebar--top">
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption1" name="navoption" />
+          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption1" name="navoption" value="home" />
           <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption1" title="Ga terug naar de ander pagina's">
-            <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
+            <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
               <polyline points="9 22 9 12 15 12 15 22"></polyline>
             </svg>
           </label>
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption2" name="navoption" checked />
+          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption2" name="navoption" value="edit" />
           <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption2" title="bewerk en toevoegen van touwen en/of routes">
-            <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit">
+            <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
               <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
             </svg>
@@ -269,7 +269,7 @@
         </div>
         <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption4" value="logout" />
         <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4" title="uitloggen">
-          <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-out">
+          <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
             <polyline points="16 17 21 12 16 7"></polyline>
             <line x1="21" y1="12" x2="9" y2="12"></line>
@@ -315,7 +315,7 @@
                   </g>
                 </svg>
               </label>
-              <input type="button" value="toevoegen" id="grip1" class="c-grip-add__button js-add__grip" data-id="bak" />
+              <input type="button" value="Toevoegen" id="grip1" class="c-grip-add__button js-add__grip" data-id="bak" />
             </li>
             <li class="c-grip-add">
               <h1 class="c-grip-add__title">Bidoigt</h1>
@@ -349,7 +349,7 @@
                   </g>
                 </svg>
               </label>
-              <input type="button" value="toevoegen" id="grip2" class="c-grip-add__button js-add__grip" data-id="bidoigt" />
+              <input type="button" value="Toevoegen" id="grip2" class="c-grip-add__button js-add__grip" data-id="bidoigt" />
             </li>
             <li class="c-grip-add">
               <h1 class="c-grip-add__title">Crimp</h1>
@@ -383,7 +383,7 @@
                   </g>
                 </svg>
               </label>
-              <input type="button" value="toevoegen" id="grip3" class="c-grip-add__button js-add__grip" data-id="crimp" />
+              <input type="button" value="Toevoegen" id="grip3" class="c-grip-add__button js-add__grip" data-id="crimp" />
             </li>
             <li class="c-grip-add">
               <h1 class="c-grip-add__title">Jug</h1>
@@ -417,7 +417,7 @@
                   </g>
                 </svg>
               </label>
-              <input type="button" value="toevoegen" id="grip4" class="c-grip-add__button js-add__grip" data-id="jug" />
+              <input type="button" value="Toevoegen" id="grip4" class="c-grip-add__button js-add__grip" data-id="jug" />
             </li>
             <li class="c-grip-add">
               <h1 class="c-grip-add__title">Mono</h1>
@@ -447,7 +447,7 @@
                   </g>
                 </svg>
               </label>
-              <input type="button" value="toevoegen" id="grip5" class="c-grip-add__button js-add__grip" data-id="mono" />
+              <input type="button" value="Toevoegen" id="grip5" class="c-grip-add__button js-add__grip" data-id="mono" />
             </li>
             <li class="c-grip-add">
               <h1 class="c-grip-add__title">Pocket</h1>
@@ -477,7 +477,7 @@
                   </g>
                 </svg>
               </label>
-              <input type="button" value="toevoegen" id="grip6" class="c-grip-add__button js-add__grip" data-id="pocket" />
+              <input type="button" value="Toevoegen" id="grip6" class="c-grip-add__button js-add__grip" data-id="pocket" />
             </li>
             <li class="c-grip-add">
               <h1 class="c-grip-add__title">Sloper</h1>
@@ -511,7 +511,7 @@
                   </g>
                 </svg>
               </label>
-              <input type="button" value="toevoegen" id="grip7" class="c-grip-add__button js-add__grip" data-id="sloper" />
+              <input type="button" value="Toevoegen" id="grip7" class="c-grip-add__button js-add__grip" data-id="sloper" />
             </li>
             <li class="c-grip-add">
               <h1 class="c-grip-add__title">Undercling</h1>
@@ -549,7 +549,7 @@
                   </g>
                 </svg>
               </label>
-              <input type="button" value="toevoegen" id="grip8" class="c-grip-add__button js-add__grip" data-id="undercling" />
+              <input type="button" value="Toevoegen" id="grip8" class="c-grip-add__button js-add__grip" data-id="undercling" />
             </li>
           </ul>
         </div>
@@ -559,7 +559,7 @@
             <div>
               <label class="c-label__select" for="select1"> Selecteer het touw </label>
               <span class="c-custom-select">
-                <select class="c-input c-custom-select__input js-select-rope" class="" name="select1" id="select1">
+                <select class="c-input c-custom-select__input js-select-rope" name="select1" id="select1">
                   <option value="touw 1">Touw 1</option>
                 </select>
                 <svg class="c-custom-select__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -568,9 +568,9 @@
               </span>
             </div>
             <div>
-              <label class="c-label__select" for="select1"> Selecteer de route </label>
+              <label class="c-label__select" for="select2"> Selecteer de route </label>
               <span class="c-custom-select">
-                <select class="c-input c-custom-select__input js-select-route" class="" name="select1" id="select1">
+                <select class="c-input c-custom-select__input js-select-route" name="select2" id="select2">
                   <option value="route 1">Route 1</option>
                 </select>
                 <svg class="c-custom-select__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -584,9 +584,9 @@
             <h1 class="c-form__setting--title">Instelling</h1>
             <div class="c-form__inputs">
               <label for="name" class="c-form__input--label">Naam</label>
-              <input placeholder="Naam van de route" type="input" id="name" class="c-form__input js-route-name" />
+              <input placeholder="Naam van de route" type="text" id="name" class="c-form__input js-route-name" />
               <label for="niveau" class="c-form__input--label">Niveau</label>
-              <input placeholder="Route niveau" type="input" id="niveau" class="c-form__input js-route-niveau" />
+              <input placeholder="Route niveau" type="text" id="niveau" class="c-form__input js-route-niveau" />
               <label for="color" class="c-form__input--label">Kleur</label>
               <input type="color" id="color" class="c-form__input c-form__input--color js-route-color" />
             </div>
@@ -615,8 +615,8 @@
 
     <div class="c-overlay js-overlay--addrope">
       <div class="c-form__inputs c-overlay--rope">
-        <label for="name" class="c-form__input--label">Image URL</label>
-        <input placeholder="Geef een image url" type="input" id="name" class="c-form__input js-route-image" />
+        <label for="imgurl" class="c-form__input--label">Image URL</label>
+        <input placeholder="Geef een image url" type="text" id="imgurl" class="c-form__input js-route-image" />
         <div class="c-form__input--buttons">
           <input type="button" value="Toevoegen" class="c-form__input--button c-form__input--button--delete js-toevoegen-rope" />
           <input type="button" value="Annuleren" class="c-form__input--button c-form__input--button--delete js-annuleren-rope" />
@@ -625,12 +625,12 @@
     </div>
     <div class="c-overlay js-overlay--addroute">
       <div class="c-form__inputs c-overlay--rope">
-        <label for="name" class="c-form__input--label">Name</label>
-        <input placeholder="Naam van de route" type="input" id="name" class="c-form__input js-add-route-name" />
-        <label for="niveau" class="c-form__input--label">Niveau</label>
-        <input placeholder="Route niveau" type="input" id="niveau" class="c-form__input js-add-route-niveau" />
-        <label for="color" class="c-form__input--label">Kleur</label>
-        <input type="color" id="color" class="c-form__input c-form__input--color js-add-route-color" />
+        <label for="nameroute" class="c-form__input--label">Name</label>
+        <input placeholder="Naam van de route" type="text" id="nameroute" class="c-form__input js-add-route-name" />
+        <label for="niveauroute" class="c-form__input--label">Niveau</label>
+        <input placeholder="Route niveau" type="text" id="niveauroute" class="c-form__input js-add-route-niveau" />
+        <label for="colorroute" class="c-form__input--label">Kleur</label>
+        <input type="color" id="colorroute" class="c-form__input c-form__input--color js-add-route-color" />
         <div class="c-form__input--buttons">
           <input type="button" value="Toevoegen" class="c-form__input--button js-toevoegen-route" />
           <input type="button" value="Annuleren" class="c-form__input--button js-annuleren-route" />
@@ -647,8 +647,8 @@
         </div>
         <p class="c-notification--text u-mb-clear js-notification-text">Je hebt geen notificaties</p>
         <div class="c-notification--buttons">
-          <input type="button" value="accept" class="c-notification--button js-notification-accept" />
-          <input type="button" value="ignore" class="c-notification--button js-notification-ignore" />
+          <input type="button" value="Accept" class="c-notification--button js-notification-accept" />
+          <input type="button" value="Ignore" class="c-notification--button js-notification-ignore" />
         </div>
       </div>
     </div>
@@ -668,16 +668,17 @@
 
         <div class="c-db-mobile-nav__nav c-db-mobile-nav__nav--main">
           <div class="c-dasboard__sidebar--top u-mb-xs">
-            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption1" name="navoption" />
-            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption1">
-              <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
+            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption8" name="navoption" value="home" />
+            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption8">
+              <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                 <polyline points="9 22 9 12 15 12 15 22"></polyline>
               </svg>
             </label>
-            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption2" name="navoption" />
-            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption2">
-              <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit">
+            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption7" name="navoption" value="edit wall" />
+            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption7"
+              >S
+              <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
                 <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
               </svg>
@@ -704,9 +705,9 @@
               </svg>
             </label> -->
           </div>
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption4" value="logout" />
-          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4">
-            <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-out">
+          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption5" value="logout" />
+          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption5">
+            <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
               <polyline points="16 17 21 12 16 7"></polyline>
               <line x1="21" y1="12" x2="9" y2="12"></line>
