--- a/ranking.html
+++ b/ranking.html
@@ -221,7 +221,7 @@
       <div class="c-header__nav js-profile">
         <div class="c-nav__profile c-nav__profile--meta">
           <a href="#notifications" class="c-nav__notification has-notification" tabindex="0">
-            <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
+            <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
               <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
             </svg>
@@ -240,7 +240,7 @@
       <div class="c-mobile-nav__body">
         <div class="c-mobile-nav__header">
           <a class="c-logo" href="index.html">
-            <svg version="1.1" id="Laag_1" class="c-logo__symbol" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 281.4 144.1" style="enable-background: new 0 0 281.4 144.1" xml:space="preserve">
+            <svg version="1.1" id="Laag_2" class="c-logo__symbol" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 281.4 144.1" style="enable-background: new 0 0 281.4 144.1" xml:space="preserve">
               <style type="text/css">
                 .st0 {
                   display: none;
@@ -445,7 +445,7 @@
         <div class="c-mobile-nav__nav js-profile">
           <div class="c-nav__profile c-nav__profile--account">
             <a href="#notifications" class="c-nav__notification has-notification">
-              <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell">
+              <svg xmlns="http://www.w3.org/2000/svg" class="c-nav__notification--symbole" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
                 <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
               </svg>
@@ -499,7 +499,7 @@
         <div>
           <label class="c-label__select" for="select1">Selecteer het touw</label>
           <span class="c-custom-select">
-            <select class="c-input c-custom-select__input js-select-rope" class="" name="select1" id="select1">
+            <select class="c-input c-custom-select__input js-select-rope" name="select1" id="select1">
               <option value="route 1">Touw 1</option>
             </select>
             <svg class="c-custom-select__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -508,9 +508,9 @@
           </span>
         </div>
         <div>
-          <label class="c-label__select" for="select1">Selecteer het de route</label>
+          <label class="c-label__select" for="select2">Selecteer het de route</label>
           <span class="c-custom-select">
-            <select class="c-input c-custom-select__input js-select-route" class="" name="select1" id="select1">
+            <select class="c-input c-custom-select__input js-select-route" name="select2" id="select2">
               <option value="route 1">Route 1</option>
             </select>
             <svg class="c-custom-select__symbol" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
