--- a/dashboard.html
+++ b/dashboard.html
@@ -231,43 +231,29 @@
       </div>
       <div class="c-dashboard__sidebar">
         <div class="c-dasboard__sidebar--top">
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption1" name="navoption" value="home" />
+          <input class="o-hide-accessible c-db-options c-db-option--hidden js-home" type="button" id="navoption1" name="navoption" value="home" />
           <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption1" title="Ga terug naar de ander pagina's">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
               <polyline points="9 22 9 12 15 12 15 22"></polyline>
             </svg>
           </label>
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption2" name="navoption" value="edit" />
-          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption2" title="bewerk en toevoegen van touwen en/of routes">
+          <input class="o-hide-accessible c-db-options c-db-option--hidden js-edit-wall" type="button" id="navoption2" name="navoption" value="edit" />
+          <label class="c-db-label c-db-label--options c-db-custom-options c-db-option--selected js-label-edit" for="navoption2" title="Bewerk en toevoegen van touwen en/of routes">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
               <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
             </svg>
           </label>
-          <!-- <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption3" name="navoption" disabled />
-          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption3" title="moderatie van social media berichten">
-            <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square">
-              <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
-            </svg>
-          </label>
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption4" name="navoption" disabled />
-          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4" title="Statistieken van de muren">
-            <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2">
-              <line x1="18" y1="20" x2="18" y2="10"></line>
-              <line x1="12" y1="20" x2="12" y2="4"></line>
-              <line x1="6" y1="20" x2="6" y2="14"></line>
-            </svg>
-          </label>
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption5" name="navoption" disabled />
-          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption5" title="Setting voor moderation">
+          <input class="o-hide-accessible c-db-options c-db-option--hidden js-setting" type="button" id="navoption9" name="navoption" value="settings" />
+          <label class="c-db-label c-db-label--options c-db-custom-options js-label-setting" for="navoption9" title="Setting voor moderation">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-settings">
               <circle cx="12" cy="12" r="3"></circle>
               <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
             </svg>
-          </label> -->
+          </label>
         </div>
-        <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption4" value="logout" />
+        <input class="o-hide-accessible c-db-options c-db-option--hidden js-logout" type="button" id="navoption4" value="logout" />
         <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4" title="uitloggen">
           <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
@@ -276,7 +262,7 @@
           </svg>
         </label>
       </div>
-      <div class="c-dashboard__main">
+      <div class="c-dashboard__main js-main-edit">
         <div class="c-db-wall">
           <div class="c-wall js-wall"></div>
         </div>
@@ -611,6 +597,7 @@
           </div>
         </div>
       </div>
+      <div class="c-dashboard__main js-main-setting u-hide"></div>
     </div>
 
     <div class="c-overlay js-overlay--addrope">
@@ -668,45 +655,30 @@
 
         <div class="c-db-mobile-nav__nav c-db-mobile-nav__nav--main">
           <div class="c-dasboard__sidebar--top u-mb-xs">
-            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption8" name="navoption" value="home" />
-            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption8">
+            <input class="o-hide-accessible c-db-options c-db-option--hidden js-home" type="button" id="navoption10" name="navoption" value="home" />
+            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption10" title="Ga terug naar de ander pagina's">
               <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                 <polyline points="9 22 9 12 15 12 15 22"></polyline>
               </svg>
             </label>
-            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption7" name="navoption" value="edit wall" />
-            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption7"
-              >S
+            <input class="o-hide-accessible c-db-options c-db-option--hidden js-edit-wall" type="button" id="navoption20" name="navoption" value="edit" />
+            <label class="c-db-label c-db-label--options c-db-custom-options js-label-edit" for="navoption20" title="Bewerk en toevoegen van touwen en/of routes">
               <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
                 <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
               </svg>
             </label>
-            <!-- <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption3" name="navoption" />
-            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption3">
-              <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square">
-                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
-              </svg>
-            </label>
-            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption4" name="navoption" />
-            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption4">
-              <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2">
-                <line x1="18" y1="20" x2="18" y2="10"></line>
-                <line x1="12" y1="20" x2="12" y2="4"></line>
-                <line x1="6" y1="20" x2="6" y2="14"></line>
-              </svg>
-            </label>
-            <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption5" name="navoption" />
-            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption5">
+            <input class="o-hide-accessible c-db-options c-db-option--hidden js-setting" type="button" id="navoption90" name="navoption" value="settings" />
+            <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption90" title="Setting voor moderation">
               <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-settings">
                 <circle cx="12" cy="12" r="3"></circle>
                 <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path>
               </svg>
-            </label> -->
+            </label>
           </div>
-          <input class="o-hide-accessible c-db-options c-db-option--hidden" type="button" id="navoption5" value="logout" />
-          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption5">
+          <input class="o-hide-accessible c-db-options c-db-option--hidden js-logout" type="button" id="navoption40" value="logout" />
+          <label class="c-db-label c-db-label--options c-db-custom-options" for="navoption40" title="uitloggen">
             <svg xmlns="http://www.w3.org/2000/svg" class="c-db-custom-option__symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
               <polyline points="16 17 21 12 16 7"></polyline>
