--- a/account.html
+++ b/account.html
@@ -492,52 +492,7 @@
       </div>
       <div class="c-account__activities">
         <h1 class="c-account__activities--title">Recente activiteiten</h1>
-        <div class="c-activities js-activity">
-          <div class="c-activity">
-            <div class="c-activity__top">
-              <div class="c-activity__top--left">
-                <img src="/img/Wall/huygh.jpg" alt="profiel foto" class="c-activity__top--img" />
-                <div>
-                  <p class="u-mb-clear c-activity__top--naam">Jhon Seed</p>
-                  <p class="u-mb-clear c-activity__top--date">12/02/2022</p>
-                </div>
-              </div>
-              <input type="checkbox" name="heart" id="heart" class="o-hide-accessible c-heart-checkbox" /><label for="heart" class="c-activity__heart"
-                ><svg xmlns="http://www.w3.org/2000/svg" class="c-activity__heart--symbol" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"></path></svg><span>12</span></label
-              >
-            </div>
-            <h5 class="u-mb-clear c-activity__intro">Heeft beklommen:</h5>
-            <div class="c-activity__stats">
-              <div>
-                <div>Touw: <span class="c-activity__stats--meta">2</span></div>
-                <div>Route: <span class="c-activity__stats--meta">2</span></div>
-              </div>
-              <div>
-                <div>Niveau: <span class="c-activity__stats--meta">3b+</span></div>
-                <div>Snelheid: <span class="c-activity__stats--meta">1,23</span>m/s</div>
-              </div>
-            </div>
-            <span class="c-activity__line"></span>
-            <p class="u-mb-clear c-activity__comment">Today I tackled a new climbing route and it was a blast ! The holds were solid and the scenery was beautiful. I didn't pushed myself to the limit and it felt great to reach the summit. #climbing #adventure #outdoors</p>
-            <div class="c-activity__comment--add">
-              <textarea name="comment" id="comment" class="c-comment__area" rows="1" placeholder="Voeg een reactie toe"></textarea
-              ><label for="send_comment" class="c-commen__button"
-                ><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-send">
-                  <line x1="22" y1="2" x2="11" y2="13"></line>
-                  <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg></label
-              ><input type="submit" name="send_comment" id="send_comment" class="o-hide-accessible" />
-            </div>
-            <div class="c-activity-user__comnments">
-              <div class="c-activity-user__comnment">
-                <div class="c-activity-user__comnment--top">
-                  <p class="c-activity-user__comnment--user u-mb-clear">By jhon seed</p>
-                  <p class="c-activity-user__comnment--date u-mb-clear">10/20/2022</p>
-                </div>
-                <p class="c-activity-user__comnment--text u-mb-clear">Great job on the climb! The route was challenging but you seemed to handle it with ease. Your technique was impressive and it was clear that you put in a lot of effort and preparation. The view from the top was breathtaking and you made it look effortless. Keep up the great work!</p>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="c-activities js-activity"></div>
       </div>
     </div>
     <div class="c-overlay js-overlay--addfriend">
@@ -564,5 +519,6 @@
         </div>
       </div>
     </div>
+    <div class="c-overly-popup"></div>
   </body>
 </html>
