--- a/dashboard.html
+++ b/dashboard.html
@@ -597,7 +597,9 @@
           </div>
         </div>
       </div>
-      <div class="c-dashboard__main js-main-setting u-hide"></div>
+      <div class="c-dashboard__main js-main-setting u-hide">
+        <div class="js-all-users c-all-db-users"></div>
+      </div>
     </div>
 
     <div class="c-overlay js-overlay--addrope">
