--- a/touwDetail.html
+++ b/touwDetail.html
@@ -451,7 +451,7 @@
       <div class="c-wall js-wall"></div>
       <div class="c-wall__options">
         <div class="c-wall__routes">
-          <h3 class="c-wall__routes--title">Touw 1</h3>
+          <h3 class="c-wall__routes--title js-rope-name">Touw 1</h3>
           <h6 class="c-wall__routes--subtitle">Selecteer de route die u wilt zien</h6>
           <div class="c-wall__routes--options js-wall_route--options"></div>
           <a href="routes.html" class="c-wall__routes--goback">Ga terug</a>
@@ -464,7 +464,6 @@
       <div class="c-notification--content">
         <div class="c-notification--top">
           <p class="c-notification--title u-mb-clear">Info</p>
-          <a class="c-notification--close u-mb-clear js-close-notification" href="#close">X</a>
         </div>
         <p class="c-notification--text u-mb-clear js-notification-text">Je hebt geen notificaties</p>
         <div class="c-notification--buttons">
