--- a/ranking.html
+++ b/ranking.html
@@ -465,8 +465,8 @@
             2
             <span class="c-ranking__podium-de">de</span>
           </p>
-          <p class="u-mb-clear u-pr c-ranking__podium--name">Appelmous</p>
-          <p class="u-mb-clear u-pr c-ranking__podium--sec"><span>22</span>sec</p>
+          <p class="u-mb-clear u-pr c-ranking__podium--name js-2-name">Naam</p>
+          <p class="u-mb-clear u-pr c-ranking__podium--sec js-2-time"><span>0</span>sec</p>
         </div>
         <div class="c-ranking__first c-ranking__podium--place u-pr">
           <svg xmlns="http://www.w3.org/2000/svg" class="c-ranking__podium--img c-ranking__podium--img--crown" width="87.75" height="66.368" viewBox="0 0 87.75 66.368">
@@ -482,8 +482,8 @@
             1
             <span class="c-ranking__podium-ste">ste</span>
           </p>
-          <p class="u-mb-clear u-pr c-ranking__podium--name">Appelmous</p>
-          <p class="u-mb-clear u-pr c-ranking__podium--sec"><span>22</span>sec</p>
+          <p class="u-mb-clear u-pr c-ranking__podium--name js-1-name">Naam</p>
+          <p class="u-mb-clear u-pr c-ranking__podium--sec js-1-time"><span>0</span>sec</p>
         </div>
         <div class="c-ranking__third c-ranking__podium--place u-pr">
           <img src="/img/aman.jpg" alt="een foto van degene die op de derde plaats staat" class="c-ranking__podium--img" />
@@ -491,8 +491,8 @@
             3
             <span class="c-ranking__podium-de">de</span>
           </p>
-          <p class="u-mb-clear u-pr c-ranking__podium--name">Appelmous</p>
-          <p class="u-mb-clear u-pr c-ranking__podium--sec"><span>22</span>sec</p>
+          <p class="u-mb-clear u-pr c-ranking__podium--name js-3-name">Naam</p>
+          <p class="u-mb-clear u-pr c-ranking__podium--sec js-3-time"><span>0</span>sec</p>
         </div>
       </div>
       <div class="c-ranking__select">
@@ -522,10 +522,10 @@
       <ul class="o-list js-ranking">
         <li class="c-ranking__item">
           <div>
-            <p class="u-mb-clear c-ranking__item--nummer">4.</p>
-            <p class="u-mb-clear c-ranking__item--name">Appelmous</p>
+            <p class="u-mb-clear c-ranking__item--nummer">0.</p>
+            <p class="u-mb-clear c-ranking__item--name">Te weining data</p>
           </div>
-          <p class="u-mb-clear c-ranking__item--sec"><span>22</span>sec</p>
+          <p class="u-mb-clear c-ranking__item--sec"><span>0</span>sec</p>
         </li>
       </ul>
     </div>
