--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="js/app.js"></script>
   </head>
 
-  <body>
+  <body id="index">
     <header class="c-header">
       <div class="c-header__logo">
         <a href="index.html" class="c-logo u-mb-clear">
